ROS lib linkage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,11 @@ include_directories(
 )
 
 add_executable(main src/main.cpp)
+target_link_libraries(main ${catkin_LIBRARIES})
+
 add_executable(shell src/shell.cpp)
+target_link_libraries(shell ${catkin_LIBRARIES})
+
 
 #C++11
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
