--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,10 @@ target_link_libraries(main ${catkin_LIBRARIES})
 add_executable(shell src/shell.cpp)
 target_link_libraries(shell ${catkin_LIBRARIES})
 
+add_executable(speak src/speak.cpp)
+target_link_libraries(speak ${catkin_LIBRARIES})
+
+
 
 #C++11
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
